# ZxingZbar-master

./: .gitattributes  .gitignore  build.gradle  gradle.properties  settings.gradle
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com.google.zxing.client.android.camera/: CameraConfigurationUtils.java
androidcore/: build.gradle
androidcore/src/androidTest/java/com/google/zxing/client/androidcore/: ExampleInstrumentedTest.java
androidcore/src/main/: AndroidManifest.xml
androidcore/src/test/java/com/google/zxing/client/androidcore/: ExampleUnitTest.java
app/: build.gradle  juanMerchant.jks
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/google/zxing/client/: MyApplication.java
app/src/main/java/com/google/zxing/client/android/: CaptureActivity.java  DecodeHandler.java  MainActivity.java
app/src/main/java/com/google/zxing/client/android/base/: MyApp.java
app/src/main/java/com/google/zxing/client/android/camera/: CameraConfigurationUtils.java  CameraZoomStrategy.java
app/src/main/java/com/google/zxing/client/android/decode/: DecodeCore.java
app/src/main/java/com/google/zxing/client/android/opencv/: ImagePreProcess.java
app/src/main/java/com/google/zxing/client/android/zbar/: ZbarController.java
processImg/: build.gradle
processImg/src/androidTest/java/com/google/zxing/client/myapplication/: ExampleInstrumentedTest.kt
processImg/src/main/: AndroidManifest.xml
processImg/src/main/cpp/: CMakeLists.txt  image_pre_process.cpp  image_pre_process.h
processImg/src/main/java/com/google/zxing/client/myapplication/: MainActivity.kt
processImg/src/test/java/com/google/zxing/client/myapplication/: ExampleUnitTest.kt
